Footer Error Fix
Items weren't aligned in the footer on via the mockup provided . added align-items center to the footer block.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
+
+
 *{
     box-sizing: border-box;
-    font-family: 'Oswald', sans-serif;
+   font-family: 'Oswald', sans-serif; 
     text-align: center;
 }
 
@@ -101,6 +104,7 @@ footer{
     font-weight: 800;
     border-top: solid #696969 2px;
     margin-top: 100px;
+    align-items: center;
 }
 
 
